--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "build": ""
   },
   "keywords": [],
   "author": "",
@@ -12,8 +13,5 @@
   "dependencies": {
     "express": "^4.17.1",
     "socket.io": "^4.1.2"
-  },
-  "devDependencies": {
-    "@vercel/node": "^2.6.2"
   }
 }
